re PR libfortran/19363 (List directed write of Infinity and NaN has regressed)

2005-02-01  Paul Thomas <paulthomas2@wanadoo.fr>

	PR libgfortran/19363
	PR libgfortran/19691
	* libgfortran.h (isfinite): Work around broken isfinite(x) in Cygwin.

From-SVN: r94530